--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="alerts" id="content"></div>
     <audio style="display: none;" controls muted="muted" autoplay></audio>
     <script src="./queue.js"></script>
     <script src="./index.js"></script>
+    <div id="name1"></div>
+    <div id="name2"></div>
+    <div id="ship1">
+      <img src="ship.png">
+    </div>
+    <div id="ship2">
+      <img src="ship2.png">
+    </div>
   </body>
 </html>
