--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <audio style="display: none;" controls muted="muted" autoplay></audio>
     <script src="./queue.js"></script>
     <script src="./index.js"></script>
-    <div id="name1"></div>
-    <div id="name2"></div>
-    <div id="ship1">
-      <img src="ship.png">
-    </div>
-    <div id="ship2">
-      <img src="ship2.png">
+    <div class="plinko-container" onclick="load_home()">
+      <div id="playerName"></div>
+      <div id="includedContent"></div>
     </div>
   </body>
 </html>
