updating game to be more visible

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <audio style="display: none;" controls muted="muted" autoplay></audio>
     <script src="./queue.js"></script>
     <script src="./index.js"></script>
-    <div class="plinko-container" onclick="load_home()">
+    <div class="plinko-container">
       <div id="playerName"></div>
+      <div id="queueList"></div>
       <div id="includedContent"></div>
     </div>
   </body>
